# micro-framebuffer

./: Cargo.toml  LICENSE  README.md
src/: frame_buffer.rs  lib.rs  pixel_formats.rs  pixel_row.rs
